Kubernetes/config-secret.yml

apiVersion: v1
kind: Namespace
metadata:
  name: prod
